# FreedomCoder

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: model-profiles.md  publish-checklist.md
examples/config/: freedomcoder.toml
examples/tasks/: happy-path.md
scripts/: install_launcher.py  install_windows_cmd.ps1  install_windows_cmd.py
src/freedomcoder/: __init__.py  __main__.py  claude_code.py  cli.py  config.py  errors.py  hf.py  launcher.py  models.py  ollama.py  profiles.py  prompting.py
src/freedomcoder/model_profiles/: __init__.py  constrained.toml  flagship.toml
tests/: test_claude_code.py  test_cli.py  test_config.py  test_launcher.py  test_ollama.py  test_profiles.py  test_prompting.py
