[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "freedomcoder"
version = "0.1.0"
description = "A local-first open-source coding agent built around Qwen3.5-27B-heretic-v2."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "FreedomCoder contributors" },
]
keywords = [
  "agent",
  "coding-agent",
  "gguf",
  "huggingface",
  "local-first",
  "ollama",
  "qwen",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "huggingface_hub>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
freedomcoder = "freedomcoder.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
